--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -70,26 +70,8 @@
       <div class="container px-4 px-lg-5 mt-5">
         <h2 class="fw-bolder mb-4">Related products</h2>
         <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
-          <% @rerated_products.first(4).each do |product| %>
-            <div class="col mb-5">
-              <div class="card h-100">
-                <!-- Product image-->
-                <%= image_tag product.image %>
-                <!-- Product details-->
-                <div class="card-body p-4">
-                  <div class="text-center">
-                    <!-- Product name-->
-                    <h5 class="fw-bolder"><%= link_to product.name, product_path(product) %></h5>
-                    <!-- Product price-->
-                    <p><%= product.price%>円</p>
-                  </div>
-                </div>
-                <!-- Product actions-->
-                <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                  <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Add to cart</a></div>
-                </div>
-              </div>
-            </div>
+          <% @related_products.each do |product| %>
+            <%= render partial: 'product', locals: { product: product } %>
           <% end %>
         </div>
       </div>
