--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -57,7 +57,7 @@
       <div class="container px-4 px-lg-5 mt-5">
         <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
           <% @products.each do |product| %>
-            <%= render partial: 'product', locals: { product: product } %>
+            <%= render @products %>
           <% end %>
         </div>
       </div>
