--- a/app/views/admin/products/index.html.erb
+++ b/app/views/admin/products/index.html.erb
@@ -11,34 +11,20 @@
     <!-- Bootstrap icons-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
     <!-- Core theme CSS (includes Bootstrap)-->
-    <link href="/assets/index.css" rel="stylesheet" />
+    <link href="/assets/admin_index.css" rel="stylesheet"/>
   </head>
   <body>
     <!-- Navigation-->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container px-4 px-lg-5">
-        <a class="navbar-brand" href="#!">Interior Shop</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
-            <li class="nav-item"><a class="nav-link active" aria-current="page" href="#!">Home</a></li>
-            <li class="nav-item"><a class="nav-link" href="#!">About</a></li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Shop</a>
-              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="#!">All Products</a></li>
-                <li><hr class="dropdown-divider" /></li>
-                <li><a class="dropdown-item" href="#!">Popular Items</a></li>
-                <li><a class="dropdown-item" href="#!">New Arrivals</a></li>
-              </ul>
-            </li>
-          </ul>
+        <a class="navbar-brand" href="#!">管理者画面</a>
+
           <form class="d-flex">
-            <button class="btn btn-outline-dark" type="submit">
-              <i class="bi-cart-fill me-1"></i>
-              Cart
-              <span class="badge bg-dark text-white ms-1 rounded-pill">0</span>
-            </button>
+            <div class="card-footer p-4 pt-3 border-top-0 bg-transparent">
+              <div class="text-center">
+              <%= link_to "商品登録", new_admin_product_path ,class:"btn btn-outline-dark mt-auto"%>
+              </div>
+            </div>
           </form>
         </div>
       </div>
@@ -56,7 +42,32 @@
     <section class="py-5">
       <div class="container px-4 px-lg-5 mt-5">
         <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
-          <%= render @products %>
+          <% @products.each do |product| %>
+          <div class="col mb-5">
+            <div class="card h-100">
+              <!-- Product image-->
+              <%= image_tag product.image %>
+              <!-- Product details-->
+              <div class="card-body p-4">
+                <div class="text-center">
+                  <!-- Product name-->
+                  <h5 class="fw-bolder"><%= link_to product.name, product_path(product) %></h5>
+                  <!-- Product price-->
+                  <p><%= product.price %>円</p>
+                  <!-- Product stock-->
+                  <p>在庫数:<%= product.stock %>個</p>
+                </div>
+              </div>
+              <!-- Product actions-->
+              <div class="card-footer p-4 pt-3 border-top-0 bg-transparent">
+                <div class="row">
+                  <div class="col text-center"><%= link_to "編集", edit_admin_product_path(product), class:"btn btn-outline-dark mt-auto" %></div>
+                  <div class="col text-center"><%= link_to "削除", admin_product_path(product), class:"btn btn-outline-dark mt-auto", data: { "turbo-method": :delete, turbo_confirm: "本当に削除しますか？" } %></div>
+                </div>
+              </div>
+           </div>
+          </div>
+          <% end %>
         </div>
       </div>
     </section>
