カート機能の実装(質問をするための現時点での実装分)

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -17,6 +17,7 @@
     <!-- Navigation-->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container px-4 px-lg-5">
+        <%= render 'layouts/flash_message' %>
         <a class="navbar-brand" href="#!">Interior Shop</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -33,13 +34,12 @@
               </ul>
             </li>
           </ul>
-          <form class="d-flex">
-            <button class="btn btn-outline-dark" type="submit">
-              <i class="bi-cart-fill me-1"></i>
-              Cart
-              <span class="badge bg-dark text-white ms-1 rounded-pill">0</span>
-            </button>
-          </form>
+          <%= link_to cart_items_path , data: { turbo: false } do %>
+          <button class="btn btn-outline-dark bi-cart-fill">
+          Cart
+          <span class="badge bg-dark text-white ms-1 rounded-pill">0</span>
+          </button>
+          <% end %>
         </div>
       </div>
     </nav>
