カート機能の追加

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -17,8 +17,7 @@
     <!-- Navigation-->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container px-4 px-lg-5">
-        <%= render 'layouts/flash_message' %>
-        <a class="navbar-brand" href="#!">Interior Shop</a>
+        <%= link_to "Interior Shop",products_path, class:"navbar-brand", data: { turbo: false } %>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
@@ -35,10 +34,10 @@
             </li>
           </ul>
           <%= link_to cart_items_path , data: { turbo: false } do %>
-          <button class="btn btn-outline-dark bi-cart-fill">
-          Cart
-          <span class="badge bg-dark text-white ms-1 rounded-pill">0</span>
-          </button>
+            <button class="btn btn-outline-dark bi-cart-fill">
+              Cart
+              <span class="badge bg-dark text-white ms-1 rounded-pill"><%= @cart_items.count %></span>
+            </button>
           <% end %>
         </div>
       </div>
