--- a/app/views/cart_items/index.html.erb
+++ b/app/views/cart_items/index.html.erb
@@ -1,4 +1,3 @@
-
 <!doctype html>
 <html lang="ja" >
   <head>
@@ -7,161 +6,180 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <link href="/assets/index.css" rel="stylesheet">
   </head>
-  <body  class="bg-light" >
+  <body>
     <a id="skippy" class="sr-only sr-only-focusable" href="#content">
-  <div class="container">
-    <span class="skiplink-text">Skip to main content</span>
-  </div>
+      <div class="container">
+        <span class="skiplink-text">Skip to main content</span>
+      </div>
     </a>
-
-    <div class="container">
-  <div class="py-5">
-    <div class="row">
-      <div class="col-md-4 order-md-2 mb-4">
-        <h4 class="d-flex justify-content-between align-items-center mb-3">
-          <span class="text-muted">カート</span>
-          <span class="badge badge-secondary badge-pill">3</span>
-        </h4>
-      <ul class="list-group mb-3">
-        <li class="list-group-item d-flex justify-content-between lh-condensed">
-          <div>
-          <% @cart_items.each do |cart_item| %>
-            <h6 class="my-0"><%= cart_item.product.name %></h6>
-            <small class="text-muted">Brief description</small>
-          </div>
-          <button class="btn btn-outline-danger bi bi-trash" type="destroy"></button>
+    <!-- Navigation-->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="container px-4 px-lg-5">
+        <%= link_to "Interior Shop",products_path, class:"navbar-brand", data: { turbo: false } %>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
+            <li class="nav-item"><a class="nav-link active" aria-current="page" href="#!">Home</a></li>
+            <li class="nav-item"><a class="nav-link" href="#!">About</a></li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Shop</a>
+              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <li><a class="dropdown-item" href="#!">All Products</a></li>
+                <li><hr class="dropdown-divider" /></li>
+                <li><a class="dropdown-item" href="#!">Popular Items</a></li>
+                <li><a class="dropdown-item" href="#!">New Arrivals</a></li>
+              </ul>
+            </li>
+          </ul>
+          <%= link_to cart_items_path , data: { turbo: false } do %>
+            <button class="btn btn-outline-dark bi-cart-fill">
+              Cart
+              <span class="badge bg-dark text-white ms-1 rounded-pill"><%= @cart_items.count %></span>
+            </button>
           <% end %>
-        </li>
-        <li class="list-group-item d-flex justify-content-between">
-          <span>合計金額</span>
-          <strong>$20</strong>
-        </li>
-      </ul>
-
-      <form class="card p-2">
-        <div class="input-group">
-          <input type="text" class="form-control" placeholder="Promo code">
-          <div class="input-group-append">
-            <button type="submit" class="btn btn-secondary">Redeem</button>
-          </div>
         </div>
-      </form>
-    </div>
-    <div class="col-md-8 order-md-1"">
-      <h4 class="mb-3">配送先情報</h4>
-      <form class="needs-validation" novalidate>
+      </div>
+    </nav>
+    <div class="container">
+      <div class="py-5">
         <div class="row">
-          <div class="col-md-6 mb-3">
-            <label for="firstName">姓</label>
-            <input type="text" class="form-control" id="firstName" placeholder="" value="" required>
+          <div class="col-md-4 order-md-2 mb-4">
+            <h4 class="d-flex justify-content-between align-items-center mb-3">
+              <span class="text-muted">カート</span>
+              <span class="badge badge-secondary badge-pill"><%= @cart_items.count %></span>
+            </h4>
+            <ul class="list-group mb-3">
+              <% @cart_items.each do |cart_item| %>
+                <li class="list-group-item d-flex justify-content-between lh-condensed border border-1">
+                  <div>
+                    <h6 class="my-0"><%= cart_item.product.name %></h6>
+                    <small class="text-muted">数量：<%= cart_item.quantity %></small>
+                  </div>
+                  <div class="justify-content-end">
+                    <small class="text-muted"><%= cart_item.line_total %>円</small>
+                    <%= link_to "",cart_item_path(cart_item), class:"btn btn-outline-danger bi bi-trash", data: { "turbo-method": :delete} %>
+                  </div>
+                </li>
+              <% end %>
+              <li class="list-group-item d-flex justify-content-between border border-1">
+                <span>合計金額</span>
+                <strong><%= @total %>円</strong>
+              </li>
+            </ul>
+            <form class="card p-2">
+              <div class="input-group">
+                <input type="text" class="form-control" placeholder="Promo code">
+                <div class="input-group-append">
+                  <button type="submit" class="btn btn-secondary">Redeem</button>
+                </div>
+              </div>
+            </form>
           </div>
-          <div class="col-md-6 mb-3">
-            <label for="lastName">名</label>
-            <input type="text" class="form-control" id="lastName" placeholder="" value="" required>
-            <div class="invalid-feedback">
-              Valid last name is required.
-            </div>
+          <div class="col-md-8 order-md-1"">
+            <h4 class="mb-3">配送先情報</h4>
+            <form class="needs-validation" novalidate>
+              <div class="row">
+                <div class="col-md-6 mb-3">
+                  <label for="firstName">姓</label>
+                  <input type="text" class="form-control" id="firstName" placeholder="" value="" required>
+                </div>
+                <div class="col-md-6 mb-3">
+                  <label for="lastName">名</label>
+                  <input type="text" class="form-control" id="lastName" placeholder="" value="" required>
+                  <div class="invalid-feedback">
+                    Valid last name is required.
+                  </div>
+                </div>
+              </div>
+              <div class="mb-3">
+                <label for="username">ユーザー名</label>
+                <div class="input-group">
+                  <div class="input-group-prepend">
+                    <span class="input-group-text">@</span>
+                  </div>
+                  <input type="text" class="form-control" id="username" placeholder="Username" required>
+                  <div class="invalid-feedback" style="width: 100%;">
+                    Your username is required.
+                  </div>
+                </div>
+              </div>
+              <div class="mb-3">
+                <label for="email">メールアドレス<span class="text-muted"></span></label>
+                <input type="email" class="form-control" id="email" placeholder="you@example.com">
+                <div class="invalid-feedback">
+                  Please enter a valid email address for shipping updates.
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-md-4 mb-3">
+                  <label for="country">郵便番号</label>
+                  <input type="text" class="form-control" id="address" placeholder="105-0001" required>
+                </div>
+                <div class="col-md-4 mb-3">
+                  <label for="state">都道府県</label>
+                  <input type="text" class="form-control" id="address" placeholder="東京都" required>
+                </div>
+              </div>
+              <div class="mb-3">
+                <label for="address">住所1</label>
+                <input type="text" class="form-control" id="address" placeholder="渋谷区神宮前" required>
+                <div class="invalid-feedback">
+                  Please enter your shipping address.
+                </div>
+              </div>
+              <div class="mb-3">
+                <label for="address2">住所2<span class="text-muted"></span></label>
+                <input type="text" class="form-control" id="address2" placeholder="アパート・マンション名、部屋番号">
+              </div>
+              <hr class="mb-4">
+              <h4 class="mb-3">クレジットカード情報</h4>
+              <div class="row">
+                <div class="col-md-6 mb-3">
+                  <label for="cc-name">名前</label>
+                  <input type="text" class="form-control" id="cc-name" placeholder="" required>
+                  <div class="invalid-feedback">
+                    Name on card is required
+                  </div>
+                </div>
+                <div class="col-md-6 mb-3">
+                  <label for="cc-number">カード番号</label>
+                  <input type="text" class="form-control" id="cc-number" placeholder="" required>
+                  <div class="invalid-feedback">
+                    Credit card number is required
+                  </div>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-md-3 mb-3">
+                  <label for="cc-expiration">有効期限</label>
+                  <input type="text" class="form-control" id="cc-expiration" placeholder="" required>
+                  <div class="invalid-feedback">
+                    Expiration date required
+                  </div>
+                </div>
+                <div class="col-md-3 mb-3">
+                  <label for="cc-cvv">CVV</label>
+                  <input type="text" class="form-control" id="cc-cvv" placeholder="" required>
+                  <div class="invalid-feedback">
+                    Security code required
+                  </div>
+                </div>
+              </div>
+              <hr class="mb-4">
+              <button class="btn btn-primary btn-lg btn-block" type="submit">購入する</button>
+            </form>
           </div>
         </div>
-
-        <div class="mb-3">
-          <label for="username">ユーザー名</label>
-          <div class="input-group">
-            <div class="input-group-prepend">
-              <span class="input-group-text">@</span>
-            </div>
-            <input type="text" class="form-control" id="username" placeholder="Username" required>
-            <div class="invalid-feedback" style="width: 100%;">
-              Your username is required.
-            </div>
-          </div>
-        </div>
-
-        <div class="mb-3">
-          <label for="email">メールアドレス<span class="text-muted"></span></label>
-          <input type="email" class="form-control" id="email" placeholder="you@example.com">
-          <div class="invalid-feedback">
-            Please enter a valid email address for shipping updates.
-          </div>
-        </div>
-
-        <div class="row">
-          <div class="col-md-4 mb-3">
-            <label for="country">郵便番号</label>
-            <input type="text" class="form-control" id="address" placeholder="105-0001" required>
-          </div>
-          <div class="col-md-4 mb-3">
-            <label for="state">都道府県</label>
-             <input type="text" class="form-control" id="address" placeholder="東京都" required>
-          </div>
-        </div>
-
-        <div class="mb-3">
-          <label for="address">住所1</label>
-          <input type="text" class="form-control" id="address" placeholder="渋谷区神宮前" required>
-          <div class="invalid-feedback">
-            Please enter your shipping address.
-          </div>
-        </div>
-
-        <div class="mb-3">
-          <label for="address2">住所2<span class="text-muted"></span></label>
-          <input type="text" class="form-control" id="address2" placeholder="アパート・マンション名、部屋番号">
-        </div>
-
-        <hr class="mb-4">
-
-        <h4 class="mb-3">クレジットカード情報</h4>
-
-        <div class="row">
-          <div class="col-md-6 mb-3">
-            <label for="cc-name">名前</label>
-            <input type="text" class="form-control" id="cc-name" placeholder="" required>
-            <div class="invalid-feedback">
-              Name on card is required
-            </div>
-          </div>
-          <div class="col-md-6 mb-3">
-            <label for="cc-number">カード番号</label>
-            <input type="text" class="form-control" id="cc-number" placeholder="" required>
-            <div class="invalid-feedback">
-              Credit card number is required
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-3 mb-3">
-            <label for="cc-expiration">有効期限</label>
-            <input type="text" class="form-control" id="cc-expiration" placeholder="" required>
-            <div class="invalid-feedback">
-              Expiration date required
-            </div>
-          </div>
-          <div class="col-md-3 mb-3">
-            <label for="cc-cvv">CVV</label>
-            <input type="text" class="form-control" id="cc-cvv" placeholder="" required>
-            <div class="invalid-feedback">
-              Security code required
-            </div>
-          </div>
-        </div>
-        <hr class="mb-4">
-        <button class="btn btn-primary btn-lg btn-block" type="submit">購入する</button>
-      </form>
-    </div>
-  </div>
-
-  <footer class="my-5 pt-5 text-muted text-center text-small">
-    <p class="mb-1">&copy; 2017-2018 Company Name</p>
-    <ul class="list-inline">
-      <li class="list-inline-item"><a href="#">Privacy</a></li>
-      <li class="list-inline-item"><a href="#">Terms</a></li>
-      <li class="list-inline-item"><a href="#">Support</a></li>
-    </ul>
-  </footer>
-</div>
-
-<script src="../../assets/js/vendor/holder.min.js"></script>
+        <footer class="my-5 pt-5 text-muted text-center text-small">
+          <p class="mb-1">&copy; 2017-2018 Company Name</p>
+          <ul class="list-inline">
+            <li class="list-inline-item"><a href="#">Privacy</a></li>
+            <li class="list-inline-item"><a href="#">Terms</a></li>
+            <li class="list-inline-item"><a href="#">Support</a></li>
+          </ul>
+        </footer>
+      </div>
+      <%# <script src="../../assets/js/vendor/holder.min.js"></script>
 <script>
   // Example starter JavaScript for disabling form submissions if there are invalid fields
   (function() {
@@ -194,6 +212,6 @@
 <script src="/docs/4.3/assets/js/src/application.js"></script>
 <script src="/docs/4.3/assets/js/src/search.js"></script>
 <script src="/docs/4.3/assets/js/src/ie-emulation-modes-warning.js"></script>
-<script src="/app/javascript/index.js"></script>
-  </body>
-</html>
+<script src="/app/javascript/index.js"></script> %>
+    </body>
+  </html>
