--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -17,7 +17,7 @@
     <!-- Navigation-->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container px-4 px-lg-5">
-        <a class="navbar-brand" href="#!">Interior Shop</a>
+        <%= link_to "Interior Shop",products_path, class:"navbar-brand", data: { turbo: false } %>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
@@ -33,13 +33,12 @@
               </ul>
             </li>
           </ul>
-          <form class="d-flex">
-            <button class="btn btn-outline-dark" type="submit">
-              <i class="bi-cart-fill me-1"></i>
+          <%= link_to cart_items_path , data: { turbo: false } do %>
+            <button class="btn btn-outline-dark bi-cart-fill">
               Cart
-              <span class="badge bg-dark text-white ms-1 rounded-pill">0</span>
+              <span class="badge bg-dark text-white ms-1 rounded-pill"><%= @cart_items.count %></span>
             </button>
-          </form>
+          <% end %>
         </div>
       </div>
     </nav>
@@ -55,34 +54,35 @@
             </div>
             <p class="lead"><%= @product.description %></p>
             <div class="d-flex">
-              <input class="form-control text-center me-3" id="inputQuantity" type="num" value="1" style="max-width: 3rem" />
-              <button class="btn btn-outline-dark flex-shrink-0" type="button">
-                <i class="bi-cart-fill me-1"></i>
-                Add to cart
-              </button>
-            </div>
+              <%= form_with model: @cart_item, local: true, data: { turbo: false } do |form| %>
+                <%= form.text_field :product_id, value: @product.id, style: "display: none;" %>
+                <%= form.number_field :quantity, min: 1, max:10, value:1 %>
+                <%= form.submit "Add to Cart", class: "btn btn-outline-dark" %>
+              <% end %>
+            </button>
           </div>
         </div>
       </div>
-    </section>
-    <!-- Related items section-->
-    <section class="py-5 bg-light">
-      <div class="container px-4 px-lg-5 mt-5">
-        <h2 class="fw-bolder mb-4">Related products</h2>
-        <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
-          <%= render @related_products %>
-        </div>
+    </div>
+  </section>
+  <!-- Related items section-->
+  <section class="py-5 bg-light">
+    <div class="container px-4 px-lg-5 mt-5">
+      <h2 class="fw-bolder mb-4">Related products</h2>
+      <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
+        <%= render @related_products %>
       </div>
-    </section>
-    <!-- Footer-->
-    <footer class="py-5 bg-dark">
-      <div class="container">
-        <p class="m-0 text-center text-white">Copyright &copy; Your Website 2023</p>
-      </div>
-    </footer>
-    <!-- Bootstrap core JS-->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- Core theme JS-->
-    <script src="/app/javascript/index.js"></script>
-  </body>
+    </div>
+  </section>
+  <!-- Footer-->
+  <footer class="py-5 bg-dark">
+    <div class="container">
+      <p class="m-0 text-center text-white">Copyright &copy; Your Website 2023</p>
+    </div>
+  </footer>
+  <!-- Bootstrap core JS-->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+  <!-- Core theme JS-->
+  <script src="/app/javascript/index.js"></script>
+</body>
 </html>
