--- a/app/views/cart_items/index.html.erb
+++ b/app/views/cart_items/index.html.erb
@@ -70,104 +70,113 @@
               <div class="input-group">
                 <input type="text" class="form-control" placeholder="Promo code">
                 <div class="input-group-append">
-                  <button type="submit" class="btn btn-secondary">Redeem</button>
+                  <button type="submit" class="btn btn-secondary">利用する</button>
                 </div>
               </div>
             </form>
           </div>
-          <div class="col-md-8 order-md-1"">
+          <div class="col-md-8 order-md-1">
+            <%= form_with model: Order.new, url: orders_path, local: true, data: { turbo: false }  do |form| %>
             <h4 class="mb-3">配送先情報</h4>
-            <form class="needs-validation" novalidate>
               <div class="row">
                 <div class="col-md-6 mb-3">
-                  <label for="firstName">姓</label>
-                  <input type="text" class="form-control" id="firstName" placeholder="" value="" required>
+                  <%= form.label :first_name, '姓' %>
+                  <%= form.text_field :first_name, class: "form-control", :placeholder => '鈴木' %>
                 </div>
                 <div class="col-md-6 mb-3">
-                  <label for="lastName">名</label>
-                  <input type="text" class="form-control" id="lastName" placeholder="" value="" required>
+                  <%= form.label :last_name, '名' %>
+                  <%= form.text_field :last_name, class: "form-control", :placeholder => '一郎' %>
                   <div class="invalid-feedback">
-                    Valid last name is required.
+                    名前が入力されていません
                   </div>
                 </div>
               </div>
               <div class="mb-3">
-                <label for="username">ユーザー名</label>
+                <%= form.label :user_name, 'ユーザー名' %>
                 <div class="input-group">
                   <div class="input-group-prepend">
                     <span class="input-group-text">@</span>
                   </div>
-                  <input type="text" class="form-control" id="username" placeholder="Username" required>
+                  <%= form.text_field :user_name, class: "form-control", :placeholder => 'Username' %>
                   <div class="invalid-feedback" style="width: 100%;">
-                    Your username is required.
+                    ユーザー名が入力されていません
                   </div>
                 </div>
               </div>
               <div class="mb-3">
-                <label for="email">メールアドレス<span class="text-muted"></span></label>
-                <input type="email" class="form-control" id="email" placeholder="you@example.com">
+                <%= form.label :email, 'メールアドレス' %>
+                <%= form.text_field :email, class: "form-control", :placeholder => 'example@example.com' %>
                 <div class="invalid-feedback">
-                  Please enter a valid email address for shipping updates.
+                  メールアドレスが入力されていません
                 </div>
               </div>
               <div class="row">
                 <div class="col-md-4 mb-3">
-                  <label for="country">郵便番号</label>
-                  <input type="text" class="form-control" id="address" placeholder="105-0001" required>
+                  <%= form.label :postal_code, '郵便番号' %>
+                  <%= form.text_field :postal_code, class: "form-control", :placeholder => '105-0001' %>
+                <div class="invalid-feedback">
+                  郵便番号が入力されていません
+                </div>
                 </div>
                 <div class="col-md-4 mb-3">
-                  <label for="state">都道府県</label>
-                  <input type="text" class="form-control" id="address" placeholder="東京都" required>
-                </div>
-              </div>
-              <div class="mb-3">
-                <label for="address">住所1</label>
-                <input type="text" class="form-control" id="address" placeholder="渋谷区神宮前" required>
+                  <%= form.label :prefecture, '都道府県' %>
+                  <%= form.text_field :prefecture, class: "form-control", :placeholder => '東京都' %>
                 <div class="invalid-feedback">
-                  Please enter your shipping address.
+                  都道府県が入力されていません
+                </div>
                 </div>
               </div>
               <div class="mb-3">
-                <label for="address2">住所2<span class="text-muted"></span></label>
-                <input type="text" class="form-control" id="address2" placeholder="アパート・マンション名、部屋番号">
+                <%= form.label :address1, '住所1' %>
+                <%= form.text_field :address1, class: "form-control", :placeholder => '渋谷区神宮前' %>
+                <div class="invalid-feedback">
+                  住所が入力されていません
+                </div>
+              </div>
+              <div class="mb-3">
+                <%= form.label :address2, '住所2' %>
+                <%= form.text_field :address2, class: "form-control", :placeholder => 'アパート・マンション名、部屋番号' %>
               </div>
               <hr class="mb-4">
               <h4 class="mb-3">クレジットカード情報</h4>
+              <%= form.fields_for :credit do |credit_form| %>
               <div class="row">
                 <div class="col-md-6 mb-3">
-                  <label for="cc-name">名前</label>
-                  <input type="text" class="form-control" id="cc-name" placeholder="" required>
+                  <%= credit_form.label :name, '名前' %>
+                  <%= credit_form.text_field :name, class: "form-control", :placeholder => 'ICHIRO SUZUKI' %>
                   <div class="invalid-feedback">
-                    Name on card is required
+                    名前が入力されていません
                   </div>
                 </div>
                 <div class="col-md-6 mb-3">
-                  <label for="cc-number">カード番号</label>
-                  <input type="text" class="form-control" id="cc-number" placeholder="" required>
+                  <%= credit_form.label :number, 'カード番号' %>
+                  <%= credit_form.text_field :number, class: "form-control", :placeholder => '1234 1234 1234 1234' %>
                   <div class="invalid-feedback">
-                    Credit card number is required
+                    カード番号が入力されていません
                   </div>
                 </div>
               </div>
               <div class="row">
                 <div class="col-md-3 mb-3">
-                  <label for="cc-expiration">有効期限</label>
-                  <input type="text" class="form-control" id="cc-expiration" placeholder="" required>
+                  <%= credit_form.label :expiration, '有効期限' %>
+                  <%= credit_form.text_field :expiration, class: "form-control", :placeholder => 'MM/YY' %>
                   <div class="invalid-feedback">
-                    Expiration date required
+                    有効期限が入力されていません
                   </div>
                 </div>
                 <div class="col-md-3 mb-3">
-                  <label for="cc-cvv">CVV</label>
-                  <input type="text" class="form-control" id="cc-cvv" placeholder="" required>
+                  <%= credit_form.label :cvv, 'CVV' %>
+                  <%= credit_form.text_field :cvv, class: "form-control", :placeholder => '123' %>
                   <div class="invalid-feedback">
-                    Security code required
+                    セキュリティコードが入力されていません
                   </div>
                 </div>
               </div>
+              <% end %>
               <hr class="mb-4">
-              <button class="btn btn-primary btn-lg btn-block" type="submit">購入する</button>
-            </form>
+              <%= form.text_field :billing_amount, value: @total, style: "display: none;" %>
+              <div class><%= form.submit "購入する", class: "btn btn-primary btn-lg btn-block" %></div>
+            <% end %>
           </div>
         </div>
         <footer class="my-5 pt-5 text-muted text-center text-small">
