--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -11,7 +11,7 @@
     <!-- Bootstrap icons-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
     <!-- Core theme CSS (includes Bootstrap)-->
-    <link href="/assets/index.css" rel="stylesheet" />
+    <link href="/assets/index.css" rel="stylesheet" style="text/index1" />
   </head>
   <body>
     <!-- Navigation-->
